@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
-<maintainer>
-<email>metalgod@gentoo.org</email>
-<name>Luis Medinas</name>
-</maintainer>
-<maintainer>
-<email>steev@gentoo.org</email>
-<name>Stephen Klimaszewski</name>
-</maintainer>
-<longdescription lang="en">
-</longdescription>
+	<herd>no-herd</herd>
+	<maintainer>
+		<email>steev@gentoo.org</email>
+		<name>Stephen Klimaszewski</name>
+	</maintainer>
 </pkgmetadata>
-
