@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/dhcdbd
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcdbd/Attic/ChangeLog,v 1.13 2007/09/08 15:47:26 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcdbd/Attic/ChangeLog,v 1.14 2007/12/25 14:29:16 phreak Exp $
+
+  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing metalgod from metadata.xml as per #99350.
 
   08 Sep 2007; Joseph Jezak <josejx@gentoo.org> dhcdbd-3.0.ebuild:
   Marked ppc stable for bug #191302.
